Sorted taste ranking descending by taste, fixed duplicate taste calculation issue.

--- a/Beerkoenig/Beerkoenig.Spa/src/index.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/index.html
@@ -13,7 +13,9 @@
   <meta name="theme-color" content="#f0ece2">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <img src="./assets/busy.gif" class="centered-container" >
+  </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
