--- a/Beerkoenig/Beerkoenig.Spa/src/index.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <app-root>
-    <img src="./assets/busy.gif" class="centered-container" >
+    <!-- <img src="./assets/busy.gif" class="centered-container" > -->
   </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
